# rust-learning-game

./: .gitignore  Cargo.toml  MENU_SYSTEM.md  README-WASM.md  README.md  TESTING.md  YAML_LEVELS.md  build-wasm.bat  build-wasm.sh  debug_current_code.txt  game_settings.json  index.html  player_progress.json  robot_code.rs  rust_game_cache.json  test_fixed_code.rs  test_level1_debug.rs  test_level2_complete.rs  test_level2_task3.rs  test_level2_task4.rs  test_loop.d  test_messaging.rs  test_obstacle_tracking.rs  test_print_popups.rs  test_scan_current.rs  test_scan_current_fix.rs  test_user_code.rs
community_levels/: 02_variables_mutability.yaml  05_control_flow.yaml  07_boolean_doors.yaml  07_references_borrowing.yaml  12_hashmaps.yaml  13_iterators.yaml  16_pattern_matching_advanced.yaml  17_method_syntax.yaml  18_associated_functions.yaml  19_modules_crates.yaml  21_lifetimes.yaml  22_lifetime_annotations.yaml  23_references_in_structs.yaml  26_smart_pointers_refcell.yaml  30_raii_pattern.yaml  31_result_deep_dive.yaml  34_custom_error_types.yaml  39_standard_input_output.yaml  40_serialization.yaml  41_traits_basics.yaml  42_trait_objects.yaml  43_generics.yaml  45_operator_overloading.yaml  47_concurrency_channels.yaml  49_testing.yaml  50_final_project.yaml  custom_movement_demo.yaml
items/: TIME_SLOW_SYSTEM.md  boolean_literals.rs  credit_gem.rs  error_handling.rs  goal.rs  golden_gem.rs  grabber_upgrade.rs  hello_world.rs  level_complete.rs  mutability.rs  scanner.rs  silver_coin.rs  speed_boost.rs  time_slow.rs  variables.rs  welcome.rs
learning_levels/: 01_hello_rust_tasks.yaml  02_functions_and_loops.yaml  02_functions_and_loops_tasks.yaml  03_primitives_data_types_tasks.yaml  04_variable_bindings_mutability_tasks.yaml  05_types_casting_tasks.yaml  06_flow_control_conditionals_tasks.yaml  07_structs_robot_systems_tasks.yaml  08_enums_state_machines_tasks.yaml  09_collections_vectors_tasks.yaml  10_advanced_error_handling_tasks.yaml  11_smol_async_basics.yaml  11_tokio_async_basics.yaml  12_smol_timers_coordination.yaml  13_smol_channels_shared_state.yaml  14_serde_json_basics.yaml  15_serde_yaml_advanced.yaml  16_serde_custom_error_handling.yaml  17_log_library_basics.yaml  18_direct_memory_management.yaml  19_bitwise_operators.yaml  20_callable_traits.yaml  21_operator_traits.yaml  22_anyhow_error_recovery.yaml
levels/: 01_explore_grid.yaml  01_hello_rust.yaml  02_find_scanner.yaml  03_blockers.yaml  03_data_types.yaml  04_functions.yaml  04_moving_enemies.yaml  06_ownership_basics.yaml  08_strings.yaml  09_arrays_tuples.yaml  10_structs.yaml  11_vectors.yaml  14_closures.yaml  15_enums.yaml  20_error_handling_intro.yaml  24_smart_pointers_box.yaml  25_smart_pointers_rc.yaml  27_memory_leaks_cycles.yaml  28_weak_references.yaml  29_drop_trait.yaml  32_option_advanced.yaml  33_panic_unwinding.yaml  35_error_propagation.yaml  36_file_io.yaml  37_command_line_args.yaml  order.txt  (+9 more)
rust-game-test-runner/: Cargo.toml  README.md
rust-game-test-runner/src/: lib.rs
(+183 files in other folders)
