[package]
name = "robo_grid_explorer_gui"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "robo_grid_explorer_gui"
path = "src/main.rs"


[dependencies]
macroquad = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
getrandom = { version = "0.2", features = ["js"] }
log = "0.4"
env_logger = "0.10"
tempfile = "3.0"
smol = "2.0"
futures-lite = "2.0"
anyhow = "1.0"
regex = "1.5"
once_cell = "1.18"

# Platform-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
notify = "6.0"
crossbeam-channel = "0.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef", "minwindef", "processthreadsapi", "errhandlingapi", "winnt", "excpt"] }


# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

[features]
default = []
console_error_panic_hook = ["dep:console_error_panic_hook"]
wee_alloc = ["dep:wee_alloc"]

