[package]
name = "robo_grid_explorer_gui"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "robo_grid_explorer_gui"
path = "src/main.rs"

[dependencies]
macroquad = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
getrandom = { version = "0.2", features = ["js"] }

# Platform-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
notify = "6.0"
crossbeam-channel = "0.5"

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

[features]
default = []
console_error_panic_hook = ["dep:console_error_panic_hook"]
wee_alloc = ["dep:wee_alloc"]

